--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -12,10 +12,29 @@
         width: 1200/1280 * 100%;
     }
     .top-menu__item {
+        display: flex;
+        justify-content: center;
+        width: 20%;
        font-size: 14px; 
         font-family: 'PT Sans Caption', bold;
     }
     .top-menu__item--with-image {
+        display: flex;
+        justify-content: center;
+        width: 20%;
+    }
+    .tingle {
+        $width_elem: 135/1280*100%;
+        $width_elem: 100%;
+        
+        position: absolute;
+        width:$width_elem;
         background-image: url(images/mount.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: contain;
+        left: (100% -$width_elem) / 2;
+        text-align: center;
+        top: 0;
     }
 }
