--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -1,4 +1,9 @@
 @media only screen and (max-width: 1280px) and (min-width: 738px){
+img {
+    max-width: 100%;
+    max-height: auto;
+}
+$width_container: 1200/1280*100%;
     .page_wrap {
         display: flex;
         justify-content: center;
@@ -9,7 +14,9 @@
         display: flex;
         justify-content: space-around;
         background: white;
-        width: 1200/1280 * 100%;
+        width: 100%;
+        padding: 1.1rem;
+        margin-top: -10px;
     }
     .top-menu__item {
         display: flex;
@@ -29,12 +36,19 @@
         
         position: absolute;
         width:$width_elem;
-        background-image: url(images/mount.jpg);
+        background-image: url(images/mount.png);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: contain;
         left: (100% -$width_elem) / 2;
         text-align: center;
         top: 0;
+    }
+    .background-of-hat {
+        position: absolute;
+        width:$width_container; 
+        top: 0;
+        right: (100%-$width_container)/2;
+        z-index: -1000;
     }
 }
