--- a/main_style.css
+++ b/main_style.css
@@ -1,4 +1,8 @@
 @media only screen and (max-width: 1280px) and (min-width: 738px) {
+  img {
+    max-width: 100%;
+    max-height: auto; }
+
   .page_wrap {
     display: flex;
     justify-content: center;
@@ -9,7 +13,9 @@
     display: flex;
     justify-content: space-around;
     background: white;
-    width: 93.75%; }
+    width: 100%;
+    padding: 1.1rem;
+    margin-top: -10px; }
 
   .top-menu__item {
     display: flex;
@@ -26,12 +32,19 @@
   .tingle {
     position: absolute;
     width: 100%;
-    background-image: url(images/mount.jpg);
+    background-image: url(images/mount.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
     left: 0%;
     text-align: center;
-    top: 0; } }
+    top: 0; }
+
+  .background-of-hat {
+    position: absolute;
+    width: 93.75%;
+    top: 0;
+    right: 3.125%;
+    z-index: -1000; } }
 
 /*# sourceMappingURL=main_style.css.map */
