--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -7,8 +7,15 @@ $width_container: 1200/1280*100%;
     .page_wrap {
         display: flex;
         justify-content: center;
+        flex-direction: column; 
         width: 100%;
         background: #f2f2f2;
+    }
+    .banner__tagstring {
+        display: flex;
+    }
+    .banner__title {
+        display: flex;
     }
     .top-menu {
         display: flex;
@@ -54,11 +61,5 @@ $width_container: 1200/1280*100%;
     }
     .banner_title {
 
-    }
-    .banner {
-        display: flex;
-    }
-    .kurwa {
-        display: flex;
     }
 }
