--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -1,8 +1,13 @@
+/*@import 'reset';*/
 @media only screen and (max-width: 1280px) and (min-width: 738px){
 img {
     max-width: 100%;
     max-height: auto;
 }
+body {
+    margin: 0 0;
+    padding: 0 0;
+    }
 $width_container: 1200/1280*100%;
     .page_wrap {
         display: flex;
@@ -10,6 +15,8 @@ $width_container: 1200/1280*100%;
         flex-direction: column; 
         width: 100%;
         background: #f2f2f2;
+        align-items: center;
+        z-index: -1001;
     }
     .banner__tagstring {
         display: flex;
@@ -21,10 +28,8 @@ $width_container: 1200/1280*100%;
         display: flex;
         justify-content: space-around;
         background: white;
-        width: 100%;
-        padding: 1.1rem;
-        margin-top: -10px;
-        border: 2px solid red;
+        width: $width_container;
+        padding: 16px 0;
     }
     .top-menu__item {
         display: flex;
