--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -9,17 +9,13 @@ body {
     padding: 0 0;
     }
 $width_container: 1200/1280*100%;
-    .page_wrap {
+    body {
         display: flex;
         flex-direction: column;
         justify-content: center;
         flex-direction: column; 
         width: 100%;
         background: #f2f2f2;
-<<<<<<< HEAD
-        border: 1px solid blue;
-        padding: 5px;
-=======
         align-items: center;
         z-index: -1001;
     }
@@ -28,21 +24,14 @@ $width_container: 1200/1280*100%;
     }
     .banner__title {
         display: flex;
->>>>>>> shift!
     }
     .top-menu {
         display: flex;
         justify-content: space-around;
         background: white;
-<<<<<<< HEAD
-        width: 90%;
-        padding: 1.1rem;
-        margin-top: -10px;
-        border: 2px solid red;
-=======
         width: $width_container;
         padding: 16px 0;
->>>>>>> shift!
+        margin-bottom: 40px;
     }
     .top-menu__item {
         display: flex;
@@ -77,7 +66,43 @@ $width_container: 1200/1280*100%;
         right: (100%-$width_container)/2;
         z-index: -1000;
     }
-    .banner_title {
+    .banner {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .banner-header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .banner-header__title  {
+       font-size: 45px;
+       color:#81b3d2;
+       font-weight: bold;
+    }
+    .banner-header__subtitle {
+       font-size: 20px;
+       font-style: italic;
+        color: #766357;
+        margin-bottom: 45px;
+    }
+    .banner-header__subtitle:before {
+        content: "-";
 
+    }
+    .banner-header__subtitle:after {
+        content: "-";
+    }
+    .banner-body {
+        font-size: 450%;
+        color: white;
+        font-weight: bolder;
+        margin-bottom: 55px;
+    }
+    .banner_footer {
+        
     }
 }
