--- a/main_style.css
+++ b/main_style.css
@@ -8,7 +8,7 @@
     margin: 0 0;
     padding: 0 0; }
 
-  .page_wrap {
+  body {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -59,6 +59,9 @@
     width: 93.75%;
     top: 0;
     right: 3.125%;
-    z-index: -1000; } }
+    z-index: -1000; }
+
+  .banner {
+    margin-top: 15px; } }
 
 /*# sourceMappingURL=main_style.css.map */
