--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -2,7 +2,7 @@
 @media only screen and (max-width: 1280px) and (min-width: 738px){
 img {
     max-width: 100%;
-    max-height: auto;
+    height: auto;
 
 }
 body {
@@ -80,23 +80,8 @@ $width_container: 1200/1280*100%;
         justify-content: center;
         align-items: center;
     }
-@media only screen  and (max-width: 1000px) and (min-width: 500px) {
-        .banner-header__title {
-            font-size: 45px;
-           font-weight: bold;
-           padding:0; 
-           color: white;
-            background-image: url(images/triangle-right.png);
-        }
-}
-@media only screen  and (max-width: 1280px) and (min-width: 1000px) {
-        .banner-header__title  {
-           font-size: 45px;
-           color:#81b3d2;
-           font-weight: bold;
-           padding:0;
-        }
-}
+
+
     .banner-header__subtitle {
        font-size: 20px;
        font-style: italic;
@@ -115,17 +100,51 @@ $width_container: 1200/1280*100%;
         font-size: 450%;
         color: white;
         font-weight: bolder;
-        margin-bottom: 55px;
+        margin-bottom: 35px;
     }
     .banner_footer {
         
     }
-    .banner-triangle-decor {
+    .banner-triangle-decor__right-triangle {
             position: absolute;
-            top: 360px;
-            left: 40/1280 * 100%;
+            top: 435px;
+            right: 40/1280 * 100%;
+            width: 50%;
             background-image: url(images/triangle-right.png);
+            background-size: contain;
             background-repeat: no-repeat;
+            background-position: 20px 0;
+            height: 40px;
             font-size: 30px;
      }
+     .banner-triangle-decor__left-triangle {
+            position: absolute;
+            top: 435px;
+            left: 40/1280 * 100%;
+            width: 50%;
+            background-image: url(images/triangle-right.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: 20px 0;
+            height: 40px;
+            font-size: 30px;
+            transform:scale(-1,1);
+     }
+}
+@media only screen  and (max-width: 1000px) and (min-width: 700px) {
+        .banner-header__title {
+            font-size: 45px;
+           font-weight: bold;
+           padding:0; 
+           color: white;
+            background-repeat: no-repeat;
+        }
+}
+@media only screen  and (max-width: 1280px) and (min-width: 1000px) {
+        .banner-header__title  {
+           font-size: 45px;
+           color:#81b3d2;
+           font-weight: bold;
+           padding:0;
+        }
 }
