--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -89,14 +89,13 @@ $width_container: 1200/1280*100%;
             background-image: url(images/triangle-right.png);
         }
 }
-@media only screen  and (max-width: 1280px) and (min-width: 1000px) {
         .banner-header__title  {
            font-size: 45px;
            color:#81b3d2;
            font-weight: bold;
            padding:0;
+           border: 1px solid red;
         }
-}
     .banner-header__subtitle {
        font-size: 20px;
        font-style: italic;
