--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -9,6 +9,7 @@ body {
     margin: 0 0;
     padding: 0 0;
     font-size: 14px;
+    font-family:PT Sans Caption;
     }
 $width_container: 1200/1280*100%;
     body {
@@ -93,19 +94,9 @@ $width_container: 1200/1280*100%;
 
     }
     .problem {
-       border: 1px solid blue; 
+            position: relative;
+            bottom: -5px;
         width: 100%;
-    }
-    
-    .enshtain {
-        height: 46px;
-        color: white;
-        background: blue;
-        background-image: url(images/bg-poster-mask.png) ;
-        background-repeat: no-repeat;
-        width: 100%;
-        background-size: contain;
-        border: 1px solid black;
     }
     
     .banner-header__subtitle:after {
@@ -121,11 +112,50 @@ $width_container: 1200/1280*100%;
        margin-bottom: 45px; 
        
     }
-    .clip-svg {
-        clip-path: url(#myClip);
+    .block-for-turist{
+        width: $width_container;
+        background: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 65px;
     }
+    .block-for-turist__caption {
+        width: 100%;
+        background: white;
+        display: flex;
+        font-size: 16px;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
+        font-weight: bold;
+        font:small-caps;
+    }
+    .block-for-turist__subcaption {
+        font-size: 10px;
+        margin-bottom: 60px;
+    }    
+    .content-for-tourist {
+        display: flex;
+        width: 100%;
+        height:200px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        border: 1px solid blue
+    }
+    .content-for-tourist__text-of-city {
+        width: 33.33333%;
+        background: #81b3d2;
+    }
+    .content-for-tourist__image-of-city {
+        width: 66.66667%;
+        background-image:url(images/image-city.gif);
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+    }
+   
     
-    }
+}
 @media only screen  and (max-width: 1000px) and (min-width: 700px) {
         .banner-header__title {
             font-size: 45px;
