--- a/main_style.css
+++ b/main_style.css
@@ -126,14 +126,19 @@
   .content-for-tourist {
     display: flex;
     width: 100%;
-    height: 200px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    border: 1px solid blue; }
+    height: 255px;
+    -moz-box-sizing: border-box; }
 
   .content-for-tourist__text-of-city {
     width: 33.33333%;
-    background: #81b3d2; }
+    background: #81b3d2;
+    color: white;
+    text-align: center;
+    padding-top: 55px;
+    padding-bottom: 65px; }
+
+  .content-for-tourist__text-of-city--font10px {
+    font-size: 10px; }
 
   .content-for-tourist__image-of-city {
     width: 66.66667%;
