--- a/main_style.css
+++ b/main_style.css
@@ -1,4 +1,10 @@
 /*@import 'reset';*/
+@font-face {
+  font-family: 'symbols-sedona';
+  src: url("font/symbols-sedona.eot?60737633");
+  src: url("font/symbols-sedona.eot?60737633#iefix") format("embedded-opentype"), url("font/symbols-sedona.woff?60737633") format("woff"), url("font/symbols-sedona.ttf?60737633") format("truetype"), url("font/symbols-sedona.svg?60737633#symbols-sedona") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 @media only screen and (max-width: 1280px) and (min-width: 738px) {
   img {
     max-width: 100%;
@@ -31,7 +37,8 @@
     justify-content: space-around;
     background: white;
     width: 93.75%;
-    padding: 16px 0; }
+    padding: 16px 0;
+    font-weight: 400; }
 
   .top-menu__item {
     display: flex;
@@ -129,6 +136,13 @@
     height: 255px;
     -moz-box-sizing: border-box; }
 
+  .content-for-tourist__higher {
+    display: flex;
+    width: 100%;
+    height: 330px;
+    -moz-box-sizing: border-box;
+    border: 1px solid blue; }
+
   .content-for-tourist__text-of-city {
     width: 33.33333%;
     background: #81b3d2;
@@ -144,7 +158,31 @@
     width: 66.66667%;
     background-image: url(images/image-city.gif);
     background-size: 100% 100%;
-    background-repeat: no-repeat; } }
+    background-repeat: no-repeat; }
+
+  .content-for-tourist__habitation {
+    padding-top: 60px;
+    width: 33.3333%;
+    text-align: center;
+    background: white; }
+
+  .content-for-tourist__food {
+    padding-top: 60px;
+    width: 33.3333%;
+    text-align: center; }
+
+  .content-for-tourist__souvenirs {
+    padding-top: 60px;
+    width: 33.3333%;
+    text-align: center; }
+
+  .content-for-tourist__higher--title-bold {
+    font-weight: bold;
+    font-size: 17px; }
+
+  .content-for-tourist__higher--subtitle {
+    color: #333333;
+    font-size: 10px; } }
 @media only screen and (max-width: 1000px) and (min-width: 700px) {
   .banner-header__title {
     font-size: 45px;
