--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -16,6 +16,15 @@ img {
     height: auto;
 
 }
+.clica {
+    height: 60px;
+    width: 100px;
+    border-radius: 5px;
+    background-color: #69d2e7;
+    text-align: center;
+    color: #FFF;
+    opacity: 1;
+}
 body {
     margin: 0 0;
     padding: 0 0;
@@ -235,12 +244,50 @@ $width_container: 1200/1280*100%;
         font-size: 22px;
         margin-bottom: 40px;
     }
+    .slide-menu {
+          display: none;
+          position: absolute;
+          border: 1px solid blue;
+          height: 360px;
+          width: 568/1200*100%;
+          left: 316/1200*100%;
+          background: white;
+          box-sizing: border-box;
+    }
+    .form-for-search-hotel {
+        display:flex;
+        margin: 55px auto;
+        font-size: 14px;
+        width: 455/570*100%;
+        flex-direction: column;
+        width: 458/570*100%;
+        
+    }
+    .padding-label-form {
+        padding-right: 20px;
+    }
+    .form-input {
+        background: #d3d9df;
+        border: 0px;
+        border-radius: 3px;
+        background-image: url(images/form-image.png);
+        background-repeat: no-repeat;
+        background-position:right top;
+    }
+    .form-input:focus {
+        outline: none;
+    }
+    
     .map-subtitle {
         font-size: 10px;
         font-weight: lighter;
         text-align: center;
         margin-bottom: 55px;
     } 
+    .carcas {
+        width: $width_container;
+        border: 1px solid red;
+    }
     .btn-search-to-hotel {
         display: flex;
         justify-content: center;
@@ -254,6 +301,14 @@ $width_container: 1200/1280*100%;
         align-items: center;
         border-box:box-sizing;
     }
+    .map {
+        width: $width_container;
+        position:relative;
+        height: 480px;
+        background-image: url(images/mapa.jpeg);
+        background-size: cover;
+    } 
+    
     
 }
 @media only screen  and (max-width: 1000px) and (min-width: 700px) {
