--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -156,6 +156,9 @@ $width_container: 1200/1280*100%;
         font-size: 10px;
         margin-bottom: 60px;
     }    
+    .porebrik {
+        background-color: #d3d9df;
+    }
     .content-for-tourist {
         display: flex;
         width: 100%;
@@ -229,7 +232,6 @@ $width_container: 1200/1280*100%;
         padding-top: 60px;
         width: 33.3333%;
         text-align: center;
-        background: #81b3d2;
     }
     .lighter {
         font-size: 10px;
@@ -286,7 +288,6 @@ $width_container: 1200/1280*100%;
     } 
     .carcas {
         width: $width_container;
-        border: 1px solid red;
     }
     .btn-search-to-hotel {
         display: flex;
