--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -29,6 +29,8 @@ body {
     margin: 0 0;
     padding: 0 0;
     font-size: 14px;
+    line-height: 21px;
+    text-transform: uppercase;
     font-family:PT Sans Caption;
     }
 $width_container: 1200/1280*100%;
@@ -53,8 +55,9 @@ $width_container: 1200/1280*100%;
         justify-content: space-around;
         background: white;
         width: $width_container;
+        font-size: 14px;
         padding: 16px 0;
-        font-weight: 400;
+        font-weight: bold;
     }
     .top-menu__item {
         display: flex;
