--- a/main_style.css
+++ b/main_style.css
@@ -198,6 +198,10 @@
     background-size: 100% 100%;
     background-repeat: no-repeat; }
 
+  .padding-label-form {
+    width: 30%;
+    background: #beceda; }
+
   .content-for-tourist__habitation {
     padding-top: 60px;
     width: 33.3333%;
@@ -276,12 +280,14 @@
     background-image: url(images/form-image.png);
     background-repeat: no-repeat;
     background-position: 98% 50%;
-    border: none; }
+    border: none;
+    margin-left: 10%; }
 
   .form-input:focus {
     outline: none; }
 
   .love-float {
+    border: 1px solid gray;
     font-size: 14px;
     font-weight: bold;
     width: 80.45775%;
