--- a/main_style.css
+++ b/main_style.css
@@ -256,11 +256,24 @@
     background: white;
     box-sizing: border-box; }
 
+  .label-block {
+    background: #F5F5F5;
+    margin-left: 9.85915%;
+    width: 24.64789%;
+    display: inline-block; }
+
+  .inside-string-form {
+    background: #FFC0CB; }
+
+  .input-block {
+    background: #FFDAB9;
+    display: inline-block;
+    width: 60.91549%; }
+
   .form-for-search-hotel {
     display: flex;
     font-size: 14px;
     justify-content: center;
-    align-items: center;
     border: 1px solid red;
     flex-direction: column;
     margin-top: 55px; }
@@ -281,7 +294,7 @@
     background-repeat: no-repeat;
     background-position: 98% 50%;
     border: none;
-    margin-left: 10%; }
+    margin-left: 5%; }
 
   .form-input:focus {
     outline: none; }
