--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -274,11 +274,24 @@ $width_container: 1200/1280*100%;
     }
 
 
+    .label-block {
+        background:  #F5F5F5;
+        margin-left: 56/568*100%;
+        width: 140/568*100%;
+        display:inline-block;
+    }
+    .inside-string-form {
+        background:#FFC0CB;
+    }
+    .input-block {
+        background: #FFDAB9;
+        display:inline-block;
+        width: 346/568*100%;
+    }
     .form-for-search-hotel {
         display:flex;
         font-size: 14px;
         justify-content: center;
-        align-items: center;
         border: 1px solid red;
         flex-direction: column;
         margin-top: 55px;
@@ -301,7 +314,7 @@ $width_container: 1200/1280*100%;
         background-repeat: no-repeat;
         background-position: 98% 50%;
         border: none;
-        margin-left: 10%;
+        margin-left: 5%;
     }
     .form-input:focus {
         outline: none;
