--- a/main_style.css
+++ b/main_style.css
@@ -257,24 +257,38 @@
     box-sizing: border-box; }
 
   .label-block {
-    background: #F5F5F5;
-    margin-left: 9.85915%;
+    margin-left: 6.33803%;
     width: 24.64789%;
     display: inline-block; }
 
   .inside-string-form {
-    background: #FFC0CB; }
+    width: 100%;
+    margin-bottom: 30px; }
 
   .input-block {
-    background: #FFDAB9;
     display: inline-block;
-    width: 60.91549%; }
+    width: 60.91549%;
+    margin-left: 1.76056%;
+    background: #d3d9dd;
+    border: none;
+    background-image: url(images/form-image.png);
+    background-repeat: no-repeat;
+    background-position: 95% 50%;
+    line-height: 26px;
+    border: #d3d9dd 2px solid; }
+
+  .input-block:focus {
+    background: white;
+    border: 2px solid #d3d9dd;
+    background-image: url(images/form-image.png);
+    background-repeat: no-repeat;
+    background-position: 95% 50%;
+    line-height: 26px; }
 
   .form-for-search-hotel {
     display: flex;
     font-size: 14px;
     justify-content: center;
-    border: 1px solid red;
     flex-direction: column;
     margin-top: 55px; }
 
